[package]
name = "octopusmq"
version = "0.1.0"
edition = "2021"
description = "Fast distributed highly available in-memory key/value database with publish-subscribe interface"

[[bin]]
name = "server"
path = "src/bin/octopusmqd/main.rs"

[[bin]]
name = "client"
path = "src/bin/octopus-cli/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
