[package]
name = "cactusdb"
version = "0.1.0"
edition = "2021"
description = "Fast highly available distributed transactional key-value database and message exchange system for low-bandwidth radio networks"
license = "Apache-2.0"

[lib]
name = "cactusdb"

[dependencies]
clap = { version = "4.1.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
serde_json = "1.0"
toml = "0.7"
thiserror = "1.0"
rocksdb = "0.19"
zmq = "0.10"

[workspace]
# See https://github.com/rust-lang/rfcs/blob/master/text/2957-cargo-features2.md
# Without resolver = 2, using `cargo build --features x` to build `cmd`
# will _not_ propagate the feature `x` into `cmd`'s direct dependencies.
resolver = "2"
members = [
  "cmd/cactusdb-cli",
  "cmd/cactusdb-server",
]
default-members = ["cmd/cactusdb-server", "cmd/cactusdb-cli"]

[workspace.dependencies]
cactusdb = { path = ".", default-features = false }